# karyaquest

./: .gitignore  .sops.yaml
apps/agent-api/: Dockerfile  pyproject.toml
apps/agent-api/src/agent_api/: applications.py  db.py  generated_documents.py  job_imports.py  job_scores.py  jobs.py  main.py  profiles.py  resume_generation_approvals.py  resume_generation_requests.py  resumes.py  settings.py
apps/agent-api/src/agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/agent-api/tests/: test_applications.py  test_generated_documents.py  test_greenhouse_imports.py  test_health.py  test_job_audit.py  test_job_import_fetch.py  test_job_imports.py  test_job_scores.py  test_jobs.py  test_lever_imports.py  test_match_scoring.py  test_migration_006_worker_claim.py  test_migration_007_resume_generation_artifacts.py  test_profiles_resumes.py  test_resume_generation_approval.py  test_resume_generation_requests.py
apps/dashboard/: Dockerfile  index.html  package-lock.json  package.json  test.mjs
apps/dashboard/nginx/: default.conf
apps/llm-gateway/: .dockerignore  Dockerfile  pyproject.toml
apps/llm-gateway/src/llm_gateway/: __init__.py  audit_logging.py  fake_provider.py  main.py  models.py  openai_provider.py  provider.py  provider_factory.py  redaction.py  settings.py
apps/llm-gateway/tests/: test_audit_logging.py  test_container_packaging.py  test_main.py  test_models.py  test_openai_provider.py  test_provider.py  test_provider_factory.py  test_redaction.py  test_settings.py
apps/resume-generator-worker/: Dockerfile  pyproject.toml
apps/resume-generator-worker/src/resume_generator_worker/: __init__.py  storage.py  worker.py
apps/resume-generator-worker/tests/: test_storage.py  test_worker.py
docs/: runbook.md
docs/codex/: agent-api-readyz-task.md
platform/argocd/: platform-app.yaml  root-app.yaml
platform/namespaces/: namespaces.yaml
scripts/: import-k3d-image-digest.sh
(+49 files in other folders)
