[project]
name = "resume-generator-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
resume-generator-worker = "resume_generator_worker.worker:main"

[project.optional-dependencies]
dev = [
  "pytest==8.4.1"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
